[tool.poetry]
name = "ocha"
version = "0.1.15"
description = "Handy tool for data analysis competitions!"
authors = ["tea_e7n <tea.enanan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
slackweb = "^1.0.5"
wandb = "^0.15.8"
pydantic = "^2.1.1"

[[tool.poetry.source]]
name = "torch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
flake8-isort = "^6.0.0"
flake8-bugbear = "^23.7.10"
flake8-builtins = "^2.1.0"
flake8-eradicate = "^1.5.0"
flake8-unused-arguments = "^0.0.13"
flake8-pytest-style = "^1.7.2"
pep8-naming = "^0.13.3"
pyproject-flake8 = "^6.0.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
max-line-length = 120
max-complexity = 18
unused-arguments-ignore-abstract-functions = true
unused-arguments-ignore-stub-functions = true
ignore = "A002,A003,B028,N803"
