[project]
name = "ocha"
version = "0.1.15"
description = "Handy tool for data analysis competitions!"
authors = [{ name = "tea_e7n", email = "tea.enanan@gmail.com" }]
readme = "README.md"

requires-python = ">=3.11,<3.12"

dependencies = [
    "numpy>=1.25.2,<1.26",
    "pandas>=2.0.3,<2.1",
    "matplotlib>=3.7.2,<3.8",
    "slackweb>=1.0.5,<1.1",
    "wandb>=0.15.8,<0.16",
    "pydantic>=2.1.1,<2.2",
]

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.7.0,<24",
    "isort>=5.12.0,<6",
    "flake8-isort>=6.0.0,<7",
    "flake8-bugbear>=23.7.10,<24",
    "flake8-builtins>=2.1.0,<3",
    "flake8-eradicate>=1.5.0,<2",
    "flake8-unused-arguments>=0.0.13,<1",
    "flake8-pytest-style>=1.7.2,<2",
    "pep8-naming>=0.13.3,<1",
    "pyproject-flake8>=6.0.0.post1,<7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = ["E", "F", "I", "PLR"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
